add media queries for body content, use relative links, fix button border, create about and contact

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -37,6 +37,9 @@
           <div class="col-sm-3 text-center">
             <a href="https://codeforafrica.org/"><img src="{{ "/img/codeforafrica_logo.png" | prepend: site.baseurl }}" class="code4africa logo img-responsive" alt="Code for Africa"></a>
           </div>
+          <!--<div class="col-sm-3 text-center">
+            <a href="#"><img src="{{ "/img/" | prepend: site.baseurl }}" class="codebridge logo img-responsive" alt="Codebridge"></a>
+          </div>-->
 
         </div>
 
