--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,20 +4,26 @@
 
     <div class="row">
         <div class="img-ico">
-            <img src="/img/icon-openbook.png" width="50px" style="float:left;margin-right:5px;" />
-            <a class="navbar-brand" href="{{ site.baseurl }}/">{{ site.title }}</a>
+
+            <div class="title-wrap">
+                <img src="/img/icon-openbook.png" width="50px" />
+                <a class="navbar-brand" href="{{ site.baseurl }}/">{{ site.title }}</a>
+            </div>
+            
             <div class="navlist">
                 <ul>
-                  <a href="#"><li>About</li></a>
-                  <a href="http://opengazettes.org.za/join"><li>Join</li></a>
-                  <a href="#"><li>Contact</li></a>
+                  <a href="/about"><li>About</li></a>
+                  <a href="join"><li>Join</li></a>
+                  <a href="contact"><li>Contact</li></a>
                 </ul>
             </div>
+
         </div>
 
-            <div class="row byline">
-                <p>The biggest freely available collection of gazettes in South Africa</p>
-            </div>
+        <div class="row byline">
+            <p>The biggest freely available collection of gazettes in SA</p>
+        </div>
+
     </div>
 
     </div>
@@ -25,24 +31,5 @@
 
     </div>
   </nav>
-
-
-  <!--<div class="container">
-      <div class="row">
-
-        <div class="col-md-4 box-byline">
-            <p>Gazettes liberated from 2000 to 2016</p>
-        </div>
-
-        <div class="col-md-4 counter">
-            <p><span class="box-num">3</span><span class="box-num">5</span><span class="box-num">0</span><span class="box-num">0</span></p>
-        </div>
-
-        <div class="col-md-4 liberate">
-            <a href="#"><button name="button">Liberate your gazettes</button></a>
-        </div>
-
-      </div>
-  </div>-->
 
 </header>
