--- a/_includes/introduction.html
+++ b/_includes/introduction.html
@@ -1,12 +1,13 @@
 <div class="introduction">
-		<div class="container">
-				<div class="banner">
-					<img src="/img/banner_2.jpg" />
-					<p>Join the <span class="highlight"><a href="#">#GazetteLiberation 
-					</a>Campaign</span></p>
-					<p>Help up build the biggest collection of freely available Gazettes in South Africa</p>
-				</div>
+		<div class="container col-md-8 col-md-offset-2">
+		<div class="img-center">
+			<div class="banner">
+				<img src="/img/banner_5.png" style="width:100%;" />
+				<a href="/join"><p class="join-title">#GazetteLiberation</p></a>
+				<p>Help up build the biggest collection of freely available Gazettes in South Africa</p>
+			</div>
 		</div>
+	</div>
 </div>
 
 <div class="gazettes_nav">
@@ -15,7 +16,7 @@
 	<h2>National Gazettes</h2>
 	<div>
 		<div class="row">
-			<div class="col-md-4"><a class="btn_p" href="http://opengazettes.org.za/gazettes/ZA/"><button class="gazettes_nav_btn btn_nat" name="button"><span class="btn_text">South African Government Gazettes</span></button></a></div>
+			<div class="col-md-4"><a class="btn_p" href="/gazettes/ZA/"><button class="gazettes_nav_btn btn_nat" name="button"><span class="btn_text">South African Government Gazettes</span></button></a></div>
 		</div>
 	</div>
 </div>
@@ -23,19 +24,19 @@
 <div class="container col-md-8 col-md-offset-2">
 	<h2>Provincial Gazettes</h2>
 		<div class="row">
-			<div class="col-md-4"><a class="btn_p" href="http://opengazettes.org.za/gazettes/ZA-EC/"><button class="gazettes_nav_btn btn_ec" name="button"><span class="btn_text">Eastern Cape</span></button></a></div>
-			<div class="col-md-4"><a class="btn_p" href="http://opengazettes.org.za/gazettes/ZA-FS/"><button class="gazettes_nav_btn btn_fs" name="button"><span class="btn_text">Free State</span></button></a></div>
-			<div class="col-md-4"><a class="btn_p" href="http://opengazettes.org.za/gazettes/ZA-GT/"><button class="gazettes_nav_btn btn_gt" name="button"><span class="btn_text">Gauteng</span></button></a></div>				
+			<div class="col-md-4"><a class="btn_p" href="/gazettes/ZA-EC/"><button class="gazettes_nav_btn btn_ec" name="button"><span class="btn_text">Eastern Cape</span></button></a></div>
+			<div class="col-md-4"><a class="btn_p" href="/gazettes/ZA-FS/"><button class="gazettes_nav_btn btn_fs" name="button"><span class="btn_text">Free State</span></button></a></div>
+			<div class="col-md-4"><a class="btn_p" href="/gazettes/ZA-GT/"><button class="gazettes_nav_btn btn_gt" name="button"><span class="btn_text">Gauteng</span></button></a></div>				
 		</div>
 		<div class="row">
-			<div class="col-md-4"><a class="btn_p" href="http://opengazettes.org.za/gazettes/ZA-NL/"><button class="gazettes_nav_btn btn_kzn" name="button"><span class="btn_text">Kwa-Zulu Natal</span></button></a></div>
-			<div class="col-md-4"><a class="btn_p" href="http://opengazettes.org.za/gazettes/ZA-LP/"><button class="gazettes_nav_btn btn_lim" name="button"><span class="btn_text">Limpopo</span></button></a></div>
-			<div class="col-md-4"><a class="btn_p" href="http://opengazettes.org.za/gazettes/ZA-MP/"><button class="gazettes_nav_btn btn_mp" name="button"><span class="btn_text">Mpumalanga</span></button></a></div>
+			<div class="col-md-4"><a class="btn_p" href="/gazettes/ZA-NL/"><button class="gazettes_nav_btn btn_kzn" name="button"><span class="btn_text">Kwa-Zulu Natal</span></button></a></div>
+			<div class="col-md-4"><a class="btn_p" href="/gazettes/ZA-LP/"><button class="gazettes_nav_btn btn_lim" name="button"><span class="btn_text">Limpopo</span></button></a></div>
+			<div class="col-md-4"><a class="btn_p" href="/gazettes/ZA-MP/"><button class="gazettes_nav_btn btn_mp" name="button"><span class="btn_text">Mpumalanga</span></button></a></div>
 		</div>
 		<div class="row">
-			<div class="col-md-4"><a class="btn_p" href="http://opengazettes.org.za/gazettes/ZA-NC/"><button class="gazettes_nav_btn btn_nc" name="button"><span class="btn_text">Northern Cape</span></button></a></div>
-			<div class="col-md-4"><a class="btn_p" href="http://opengazettes.org.za/gazettes/ZA-NW/"><button class="gazettes_nav_btn btn_nw" name="button"><span class="btn_text">North-West</span></button></a></div>
-			<div class="col-md-4"><a class="btn_p" href="http://opengazettes.org.za/gazettes/ZA-WC/"><button class="gazettes_nav_btn btn_wc" name="button"><span class="btn_text">Western Cape</span></button></a></div>
+			<div class="col-md-4"><a class="btn_p" href="/gazettes/ZA-NC/"><button class="gazettes_nav_btn btn_nc" name="button"><span class="btn_text">Northern Cape</span></button></a></div>
+			<div class="col-md-4"><a class="btn_p" href="/gazettes/ZA-NW/"><button class="gazettes_nav_btn btn_nw" name="button"><span class="btn_text">North-West</span></button></a></div>
+			<div class="col-md-4"><a class="btn_p" href="/gazettes/ZA-WC/"><button class="gazettes_nav_btn btn_wc" name="button"><span class="btn_text">Western Cape</span></button></a></div>
 		</div>
 	</div>
 </div>
