--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -10,11 +10,13 @@ button {
     color: #ffffff;
     padding: 10px;
     font-weight:600;
+    border: 2px solid #0067c5;
 }
 
 button:hover {
-    background-color: $grey-color-light;
+    background-color: #fff;
     color: #0067c5;
+    border: 2px solid #0067c5;
 }
 
 .text-standout {
@@ -23,18 +25,27 @@ button:hover {
 }
 
 .site-header {
+
     .navbar {
         background-color: #000000;
     }
+
     .img-ico img {
         padding-top: 9px;
     }
+
+    .title-wrap img {
+        float:left;
+        margin-right:5px;
+    }
+
     .navlist ul {
         list-style-type:none;
-        padding-top: 20px;
         font-weight: 700;
         text-transform: uppercase;
         font-size: 12px;
+        float:right;
+        margin-top:25px;
     }
     .navlist a {
         color: #ccc;
@@ -53,6 +64,7 @@ button:hover {
         line-height: 1em;
         font-size: 14px;
         margin-left: 57px;
+        font-weight: 400;
     }
     .byline p {
         margin-top:-16px;
@@ -104,7 +116,6 @@ button:hover {
             margin-top: 12px;
         }
     }
-
     .cta p {
             margin-top: 30px;
             font-size: 24px;
@@ -116,15 +127,12 @@ button:hover {
     background-color: #f7f7f7;
     margin-top: 30px;
     padding: 30px;
-
     h2 {
         margin-top: 0px;
     }
-
     .logos {
         margin-top: 30px;
     }
-
     .logo {
         width: auto;
         height: 75px;
@@ -154,31 +162,21 @@ button:hover {
 }
 
 .introduction {
-    
-    .banner img {
-        width: 117%;
-        margin-left: -60px;
-    }
-
     .banner p {
         font-size: 30px;
         font-weight: 700;
     }
-
     margin-top: 30px;
     margin-bottom: 30px;
-
     .cta a {
         font-weight: 600;
         color: #0067c5;
     }
-
 }
 
 .gazettes_nav {
         
     .gazettes_nav_btn {
-            
         background-color: #0067c5;
         border: none;
         color: #ffffff;
@@ -198,8 +196,9 @@ button:hover {
 
     .btn_p {
         color: #ffffff;
-        font-size: 20px;
+        font-size: 24px;
         font-family: 'Lato', sans-seif;
+        line-height: 42px;
     }
 
     .btn_p:hover {
@@ -261,6 +260,9 @@ button:hover {
 .img-center {
     text-align:center;
 }
+.img-center a:hover {
+    text-decoration: none;
+}
 
 .join-title {
     background-color: #0067c5;
@@ -271,10 +273,62 @@ button:hover {
     width: 60%;
     margin-left: auto;
     margin-right: auto;
-    margin-top:-1px;
+    border: 2px solid #0067c5;
+}
+
+.join-title:hover {
+    background-color:#fff;
+    color: #0067c5;
+    border: 2px solid #0067c5;
+}
+.banner a:hover {
+    text-decoration:none;
 }
 
 .join_intro {
     margin-top: 30px;
     margin-bottom: 30px;
+}
+
+@media screen and (max-width: 768px) {
+    .row {
+        margin-left: 0px;
+        margin-right:0px;
+    }
+    .site-header .byline {
+        margin-left: 72px;
+    }
+}
+
+
+@media screen and (max-width: 679px) {
+    .site-header .navlist ul {
+        clear: both;
+        float: none;
+        text-align: center;
+    }
+    .site-header .byline {
+        margin-left: 0px;
+        text-align: center;
+    }
+    .site-header .byline p {
+        margin-top: -47px;
+    }
+    .navbar-brand {
+        float: none;
+        padding: 0px;
+    }
+    .title-wrap {
+        text-align: center;
+    }
+    .site-header .title-wrap img {
+        float:none;
+        margin-right:0px;
+    }
+    .site-header .img-ico img {
+        padding-top: 0px;
+    }
+    .introduction .banner p {
+        font-size: 20px;
+    }
 }
