fix spelling error, replace free state image, update styling, redirect contact to about, add atrribution

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,7 +14,7 @@
                 <ul>
                   <a href="/about"><li>About</li></a>
                   <a href="join"><li>Join</li></a>
-                  <a href="contact"><li>Contact</li></a>
+                  <a href="/about#contact-us"><li>Contact</li></a>
                 </ul>
             </div>
 
