--- a/_includes/introduction.html
+++ b/_includes/introduction.html
@@ -4,7 +4,7 @@
 			<div class="banner">
 				<img src="/img/banner_5.png" style="width:100%;" />
 				<a href="/join"><p class="join-title">#GazetteLiberation</p></a>
-				<p>Help up build the biggest collection of freely available Gazettes in South Africa</p>
+				<p>Help us build the biggest collection of freely available Gazettes in South Africa</p>
 			</div>
 		</div>
 	</div>
