--- a/_layouts/jurisdiction.html
+++ b/_layouts/jurisdiction.html
@@ -1,19 +1,22 @@
 ---
 layout: default
 ---
-<article class="year">
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-  </header>
+<div class="col-md-8 col-md-offset-2">
+    <article class="year">
 
-  <div class="post-content">
-    <ul>
-    {% assign years = site.data.gazettes[page.jurisdiction].years | reverse %}
-    {% for year in years %}
-      <li><a href="{{ year }}">{{ year }}</a></li>
-    {% endfor %}
-    </ul>
-  </div>
+      <header class="post-header">
+        <h1 class="post-title">{{ page.title }}</h1>
+      </header>
 
-</article>
+      <div class="post-content">
+        <ul>
+        {% assign years = site.data.gazettes[page.jurisdiction].years | reverse %}
+        {% for year in years %}
+          <li><a href="{{ year }}">{{ year }}</a></li>
+        {% endfor %}
+        </ul>
+      </div>
+
+    </article>
+</div>
