add contact details, amend grammar,

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,7 +21,7 @@
         </div>
 
         <div class="row byline">
-            <p>The biggest freely available collection of gazettes in SA</p>
+            <p>The biggest freely available collection of gazettes in the country</p>
         </div>
 
     </div>
