--- a/_includes/introduction.html
+++ b/_includes/introduction.html
@@ -4,7 +4,7 @@
 			<div class="banner">
 				<img src="/img/banner_5.png" style="width:100%;" />
 				<a href="/join"><p class="join-title">#GazetteLiberation</p></a>
-				<p>Help us build the biggest collection of freely available Gazettes in South Africa</p>
+				<p>Help us build the biggest collection of freely available gazettes in South Africa</p>
 			</div>
 		</div>
 	</div>
@@ -16,7 +16,7 @@
 	<h2>National Gazettes</h2>
 	<div>
 		<div class="row">
-			<div class="col-md-4"><a class="btn_p" href="/gazettes/ZA/"><button class="gazettes_nav_btn btn_nat" name="button"><span class="btn_text">South African Government Gazettes</span></button></a></div>
+			<div class="col-md-4"><a class="btn_p" href="/gazettes/ZA/"><button class="gazettes_nav_btn btn_nat" name="button"><span class="btn_text">Government Gazettes</span></button></a></div>
 		</div>
 	</div>
 </div>
@@ -29,7 +29,7 @@
 			<div class="col-md-4"><a class="btn_p" href="/gazettes/ZA-GT/"><button class="gazettes_nav_btn btn_gt" name="button"><span class="btn_text">Gauteng</span></button></a></div>				
 		</div>
 		<div class="row">
-			<div class="col-md-4"><a class="btn_p" href="/gazettes/ZA-NL/"><button class="gazettes_nav_btn btn_kzn" name="button"><span class="btn_text">Kwa-Zulu Natal</span></button></a></div>
+			<div class="col-md-4"><a class="btn_p" href="/gazettes/ZA-NL/"><button class="gazettes_nav_btn btn_kzn" name="button"><span class="btn_text">KwaZulu Natal</span></button></a></div>
 			<div class="col-md-4"><a class="btn_p" href="/gazettes/ZA-LP/"><button class="gazettes_nav_btn btn_lim" name="button"><span class="btn_text">Limpopo</span></button></a></div>
 			<div class="col-md-4"><a class="btn_p" href="/gazettes/ZA-MP/"><button class="gazettes_nav_btn btn_mp" name="button"><span class="btn_text">Mpumalanga</span></button></a></div>
 		</div>
