add twitter feed, add code bridge logo, add counter area but remains hidden until content is supplied

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,19 +25,23 @@
         <div class="footer_campaign">
           <p>Who is a part of the <a href="#">#GazetteLiberation</a> campaign?</p>
         </div>
+
         <div class="row logos">
           <div class="col-sm-3 text-center">
-            <a href="http://code4sa.org"><img src="{{ "/img/logo.png" | prepend: site.baseurl }}" class="c4sa logo img-responsive" alt="Code for SA"></a>
+            <a href="http://code4sa.org" target="_blank"><img src="{{ "/img/logo.png" | prepend: site.baseurl }}" class="c4sa logo img-responsive" alt="Code for SA"></a>
+            <a href="https://indigotrust.org.uk/" target="_blank"><img src="{{ "/img/indigo_trust.png" | prepend: site.baseurl }}" class="indigo-trust logo img-responsive" alt="Indigo Trust"></a>
+            <a href="http://www.codebridge.co.za/" target="_blank"><img src="{{ "/img/codebridge-logo.png" | prepend: site.baseurl }}" class="codebridge logo img-responsive" alt="Codebridge"></a>
           </div>
           <div class="col-sm-3 text-center">
-            <a href="http://www.saflii.org/"><img src="{{ "/img/saflii_logo.png" | prepend: site.baseurl }}" class="saflii logo img-responsive" alt="SAFLII"></a>
+            <a href="http://www.saflii.org/" target="_blank"><img src="{{ "/img/saflii_logo.png" | prepend: site.baseurl }}" class="saflii logo img-responsive" alt="SAFLII"></a>
+            <a href="https://codeforafrica.org/" target="_blank"><img src="{{ "/img/codeforafrica_logo.png" | prepend: site.baseurl }}" class="code4africa logo img-responsive" alt="Code for Africa"></a>
           </div>
-          <div class="col-sm-3 text-center">
-            <a href="https://indigotrust.org.uk/"><img src="{{ "/img/indigo_trust.png" | prepend: site.baseurl }}" class="indigo-trust logo img-responsive" alt="Indigo Trust"></a>
+          <div class="col-sm-6">
+            <a class="twitter-timeline"  href="https://twitter.com/hashtag/GazetteLiberation" data-widget-id="771327133071310848">#GazetteLiberation Tweets</a>
+            <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
           </div>
-          <div class="col-sm-3 text-center">
-            <a href="https://codeforafrica.org/"><img src="{{ "/img/codeforafrica_logo.png" | prepend: site.baseurl }}" class="code4africa logo img-responsive" alt="Code for Africa"></a>
-          </div>
+        </div>
+
           <!--<div class="col-sm-3 text-center">
             <a href="#"><img src="{{ "/img/" | prepend: site.baseurl }}" class="codebridge logo img-responsive" alt="Codebridge"></a>
           </div>-->
