--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -25,9 +25,12 @@ button:hover {
 }
 
 .site-header {
+    
+    background-color: #eeeeee;
 
     .navbar {
         background-color: #000000;
+        margin-bottom: 10px;
     }
 
     .img-ico img {
