--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,35 +1,37 @@
 <header class="site-header">
+  
   <nav class="navbar">
     <div class="container">
-
-    <div class="row">
-        <div class="img-ico">
-
-            <div class="title-wrap">
-                <img src="/img/icon-openbook.png" width="50px" />
-                <a class="navbar-brand" href="{{ site.baseurl }}/">{{ site.title }}</a>
-            </div>
-            
-            <div class="navlist">
-                <ul>
-                  <a href="/about"><li>About</li></a>
-                  <a href="join"><li>Join</li></a>
-                  <a href="/about#contact-us"><li>Contact</li></a>
-                </ul>
+        <div class="row">
+            <div class="img-ico">
+                <div class="title-wrap">
+                    <img src="/img/icon-openbook.png" width="50px" />
+                    <a class="navbar-brand" href="{{ site.baseurl }}/">{{ site.title }}</a>
+                </div>
+                <div class="navlist">
+                    <ul>
+                      <a href="/about"><li>About</li></a>
+                      <a href="join"><li>Join</li></a>
+                      <a href="/about#contact-us"><li>Contact</li></a>
+                    </ul>
+                </div>
             </div>
 
+            <div class="row byline">
+                <p>The biggest freely available collection of gazettes in the country</p>
+            </div>
         </div>
-
-        <div class="row byline">
-            <p>The biggest freely available collection of gazettes in the country</p>
-        </div>
-
-    </div>
-
-    </div>
-
-
     </div>
   </nav>
+
+  <!--
+    <div class="container">
+        <div class="row">
+            <div class="counter">
+                <p><i class="fa fa-newspaper-o" aria-hidden="true"></i> XX gazettes from 2000 to 2012</p>
+            </div>
+        </div>
+    </div>
+  -->
 
 </header>
