--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,10 @@
       <div class="col-md-8 col-md-offset-2">
         <h2>{{ site.title }}</h2>
         <p>{{ site.description }}</p>
-
+        <p class="footer-govprinters">
+          Gazettes from the <a href="http://www.gpwonline.co.za/">Government Printing Works</a> are re-shared under <a href="/img/gpw-authorization.pdf">Government Printers Authorization No. 11733 dated 23 March 2016</a>.
+        </p>
+        
         <div class="row">
           <div class="col-sm-6">
             <ul class="list-unstyled">
@@ -22,6 +25,8 @@
             </ul>
           </div>
         </div>
+
+
         <div class="footer_campaign">
           <p>Who is a part of the <a href="#">#GazetteLiberation</a> campaign?</p>
         </div>
@@ -41,16 +46,7 @@
             <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
           </div>
         </div>
-
-          <!--<div class="col-sm-3 text-center">
-            <a href="#"><img src="{{ "/img/" | prepend: site.baseurl }}" class="codebridge logo img-responsive" alt="Codebridge"></a>
-          </div>-->
-
         </div>
-
-        <p>
-        Gazettes from the <a href="http://www.gpwonline.co.za/">Government Printing Works</a> are re-shared under <a href="/img/gpw-authorization.pdf">Government Printers Authorization No. 11733 dated 23 March 2016</a>.
-        </p>
 
         <!--<div class="twitter-feed"><a class="twitter-timeline"  href="https://twitter.com/hashtag/GazetteLiberation" data-widget-id="771327133071310848">#GazetteLiberation Tweets</a><script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script></div>-->
 
