full width footer, add page titles, update styles, reverse buttons, move contact on about page, move cta above button, position national gazettes button

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 
   <div class="container">
     <div class="row">
-      <div class="col-md-8 col-md-offset-2">
+      <div class="">
         <h2>{{ site.title }}</h2>
         <p>{{ site.description }}</p>
         <p class="footer-govprinters">
