--- a/_includes/header.html
+++ b/_includes/header.html
@@ -34,4 +34,10 @@
     </div>
   -->
 
+  <div class="container">
+    <div class="page-tag">
+      <p>{{ page.pagetag }}</p>
+    </div>
+  </div>
+
 </header>
