--- a/_includes/introduction.html
+++ b/_includes/introduction.html
@@ -3,8 +3,8 @@
 		<div class="img-center">
 			<div class="banner">
 				<img src="/img/banner_5.png" style="width:100%;" />
-				<a href="/join"><p class="join-title">#GazetteLiberation</p></a>
 				<p>Help us build the biggest collection of freely available gazettes in South Africa</p>
+				<a href="/join"><p class="join-title">#GazetteLiberation</p></a>
 			</div>
 		</div>
 	</div>
@@ -16,7 +16,7 @@
 	<h2>National Gazettes</h2>
 	<div>
 		<div class="row">
-			<div class="col-md-4"><a class="btn_p" href="/gazettes/ZA/"><button class="gazettes_nav_btn btn_nat" name="button"><span class="btn_text">Government Gazettes</span></button></a></div>
+			<div class="col-md-6 col-md-offset-3"><a class="btn_p" href="/gazettes/ZA/"><button class="gazettes_nav_btn btn_nat" name="button"><span class="btn_text">Government Gazettes</span></button></a></div>
 		</div>
 	</div>
 </div>
