add icons to cta btw, fix icon sizing, update styles, reposition cta on about page

--- a/_includes/introduction.html
+++ b/_includes/introduction.html
@@ -4,7 +4,7 @@
 			<div class="banner">
 				<img src="/img/banner_5.png" style="width:100%;" />
 				<p>Help us build the biggest collection of freely available gazettes in South Africa</p>
-				<a href="/join"><p class="join-title">#GazetteLiberation</p></a>
+				<a href="/join"><p class="join-title">#GazetteLiberation <i class="fa fa-chevron-circle-right" aria-hidden="true"></i></p></a>
 			</div>
 		</div>
 	</div>
