--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -197,6 +197,14 @@ h2, .h2 {
     margin-left: -15px;
 }
 
+.counter {
+    font-size: 20px;
+    font-weight: 400;
+    color: #333;
+    float:right;
+    margin-top: 5px;
+}
+
 .gazettes_nav {
         
     .gazettes_nav_btn {
@@ -371,6 +379,10 @@ fa-chevron-circle-right {
     }
     .page-tag {
         margin-left: 0px;
+    }
+    .counter {
+        float:left;
+        font-size: 18px;
     }
 }
 
