add word gazettes to counter string

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -35,7 +35,7 @@
 
           <div class="col-md-6">
             <div class="counter">
-                <p><i class="fa fa-history" aria-hidden="true"></i> {{ site.data.gazettes.stats.count }} from  {{ site.data.gazettes.stats.earliest_year }} to {{ site.data.gazettes.stats.latest_year }} </p>
+                <p><i class="fa fa-history" aria-hidden="true"></i> {{ site.data.gazettes.stats.count }} gazettes from  {{ site.data.gazettes.stats.earliest_year }} to {{ site.data.gazettes.stats.latest_year }} </p>
             </div>
           </div>
 
