Revert "2col homepage header, update styles, move position of bin on about page, full width header, transparent banner, add and insert (commented) icons to join page"
This reverts commit e9d6c63dfb19df8ebe88a9eda7f4e6b0d0f383e3.

--- a/_includes/introduction.html
+++ b/_includes/introduction.html
@@ -1,9 +1,22 @@
+<div class="introduction">
+		<div class="container col-md-8 col-md-offset-2">
+		<div class="img-center">
+			<div class="banner">
+				<img src="/img/banner_5.png" style="width:100%;" />
+				<p>Help us build the biggest collection of freely available gazettes in South Africa</p>
+				<a href="/join"><p class="join-title">#GazetteLiberation <i class="fa fa-chevron-circle-right" aria-hidden="true"></i></p></a>
+			</div>
+		</div>
+	</div>
+</div>
+
 <div class="gazettes_nav">
 
 <div class="container col-md-8 col-md-offset-2">
+	<h2>National Gazettes</h2>
 	<div>
 		<div class="row">
-			<div class="col-md-6 col-md-offset-3"><a class="btn_p" href="/gazettes/ZA/"><button class="gazettes_nav_btn btn_nat" name="button"><span class="btn_text">National Government Gazettes</span></button></a></div>
+			<div class="col-md-6 col-md-offset-3"><a class="btn_p" href="/gazettes/ZA/"><button class="gazettes_nav_btn btn_nat" name="button"><span class="btn_text">Government Gazettes</span></button></a></div>
 		</div>
 	</div>
 </div>
