disable free state - status - coming soon

--- a/_includes/introduction.html
+++ b/_includes/introduction.html
@@ -13,7 +13,7 @@
 	<h2>Provincial Gazettes</h2>
 		<div class="row">
 			<div class="col-md-4"><a class="btn_p" href="/gazettes/ZA-EC/"><button class="gazettes_nav_btn btn_ec" name="button"><span class="btn_text">Eastern Cape</span></button></a></div>
-			<div class="col-md-4"><a class="btn_p" href="/gazettes/ZA-FS/"><button class="gazettes_nav_btn btn_fs" name="button"><span class="btn_text">Free State</span></button></a></div>
+			<div class="col-md-4"><a class="btn_p" href="#"><button class="gazettes_nav_btn btn_fs" name="button"><span class="btn_text">Free State<br><span class="unavailable">coming soon</span></span></button></a></div>
 			<div class="col-md-4"><a class="btn_p" href="/gazettes/ZA-GT/"><button class="gazettes_nav_btn btn_gt" name="button"><span class="btn_text">Gauteng</span></button></a></div>				
 		</div>
 		<div class="row">
