--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -802,6 +802,12 @@ fa-chevron-circle-right {
     font-size: 14px;
 }
 
+.unavailable {
+    color: red;
+    font-size: 13px;
+    padding-left: 5px;
+}
+
 // free-text article pages
 article {
     section {
