updated code bridge logo

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -35,7 +35,7 @@
           <div class="col-sm-3 text-center">
             <a href="http://code4sa.org" target="_blank"><img src="{{ "/img/logo.png" | prepend: site.baseurl }}" class="c4sa logo img-responsive" alt="Code for SA"></a>
             <a href="https://indigotrust.org.uk/" target="_blank"><img src="{{ "/img/indigo_trust.png" | prepend: site.baseurl }}" class="indigo-trust logo img-responsive" alt="Indigo Trust"></a>
-            <a href="http://www.codebridge.co.za/" target="_blank"><img src="{{ "/img/codebridge-logo.png" | prepend: site.baseurl }}" class="codebridge logo img-responsive" alt="Codebridge"></a>
+            <a href="http://www.codebridge.co.za/" target="_blank"><img src="{{ "/img/codebr.png" | prepend: site.baseurl }}" class="codebridge logo img-responsive" alt="Codebridge"></a>
           </div>
           <div class="col-sm-3 text-center">
             <a href="http://www.saflii.org/" target="_blank"><img src="{{ "/img/saflii_logo.png" | prepend: site.baseurl }}" class="saflii logo img-responsive" alt="SAFLII"></a>
