--- a/_includes/introduction-cta.html
+++ b/_includes/introduction-cta.html
@@ -9,7 +9,7 @@
 					</div>
 					<div class="col-md-6 cta-message">
 							<p>Help us build the biggest collection of freely available gazettes in South Africa</p>
-							<a href="/join"><p class="join-title">#GazetteLiberation <i class="fa fa-chevron-circle-right" aria-hidden="true"></i></p></a>
+							<a href="/join"><p class="join-title">#GazetteLiberation&nbsp;<i class="fa fa-chevron-circle-right" aria-hidden="true"></i></p></a>
 					</div>
 				</div>
 			</div>
